# nonebot-plugin-atri

./: README.md  pyproject.toml  setup.py
nonebot_plugin_atri/: __init__.py  data.py
